hack/update-codegen.sh && UPDATE_COMPATIBILITY_FIXTURE_DATA=true go test k8s.io/api && hack/update-openapi-spec.sh
