# staging/src/k8s.io/apiserver/pkg/apis/authorization/v1alpha1/zz_generated.validations.go
@@ -1,0 +1,265 @@
+//go:build !ignore_autogenerated
+// +build !ignore_autogenerated
+
+/*
+Copyright The Kubernetes Authors.
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+*/
+
+// Code generated by validation-gen. DO NOT EDIT.
+
+package v1alpha1
+
+import (
+	context "context"
+	fmt "fmt"
+
+	admissionv1 "k8s.io/api/admission/v1"
+	authorizationv1 "k8s.io/api/authorization/v1"
+	authorizationv1alpha1 "k8s.io/api/authorization/v1alpha1"
+	equality "k8s.io/apimachinery/pkg/api/equality"
+	operation "k8s.io/apimachinery/pkg/api/operation"
+	safe "k8s.io/apimachinery/pkg/api/safe"
+	validate "k8s.io/apimachinery/pkg/api/validate"
+	runtime "k8s.io/apimachinery/pkg/runtime"
+	types "k8s.io/apimachinery/pkg/types"
+	field "k8s.io/apimachinery/pkg/util/validation/field"
+	v1 "k8s.io/apiserver/pkg/apis/authorization/v1"
+)
+
+func init() { localSchemeBuilder.Register(RegisterValidations) }
+
+// RegisterValidations adds validation functions to the given scheme.
+// Public to allow building arbitrary schemes.
+func RegisterValidations(scheme *runtime.Scheme) error {
+	// type AuthorizationConditionsReview
+	scheme.AddValidationFunc(
+		(*authorizationv1alpha1.AuthorizationConditionsReview)(nil),
+		func(ctx context.Context, op operation.Operation, obj, oldObj interface{}) field.ErrorList {
+			switch op.Request.SubresourcePath() {
+			case "/":
+				return Validate_AuthorizationConditionsReview(
+					ctx, op, nil, /* fldPath */
+					obj.(*authorizationv1alpha1.AuthorizationConditionsReview),
+					safe.Cast[*authorizationv1alpha1.AuthorizationConditionsReview](oldObj))
+			}
+			return field.ErrorList{
+				field.InternalError(nil, fmt.Errorf("no validation found for %T, subresource: %v", obj, op.Request.SubresourcePath())),
+			}
+		})
+	return nil
+}
+
+var unionMembershipFor_k8s_io_api_authorization_v1alpha1_AuthorizationConditionsRequest_ = validate.NewUnionMembership(validate.NewUnionMember("admissionRequest"))
+
+// Validate_AuthorizationConditionsRequest validates an instance of AuthorizationConditionsRequest according
+// to declarative validation rules in the API schema.
+func Validate_AuthorizationConditionsRequest(
+	ctx context.Context, op operation.Operation, fldPath *field.Path,
+	obj, oldObj *authorizationv1alpha1.AuthorizationConditionsRequest) (errs field.ErrorList) {
+
+	if e := validate.Union(ctx, op, fldPath, obj, oldObj, unionMembershipFor_k8s_io_api_authorization_v1alpha1_AuthorizationConditionsRequest_,
+		func(obj *authorizationv1alpha1.AuthorizationConditionsRequest) bool {
+			if obj == nil {
+				return false
+			}
+			return obj.AdmissionRequest != nil
+		}); len(e) != 0 {
+		errs = append(errs, e...)
+	}
+
+	{ // field authorizationv1alpha1.AuthorizationConditionsRequest.Decision
+		fn := func(
+			fldPath *field.Path,
+			obj, oldObj *authorizationv1.ConditionsAwareDecision,
+			oldValueCorrelated bool) (errs field.ErrorList) {
+			// don't revalidate unchanged data
+			if oldValueCorrelated && op.Type == operation.Update {
+				if equality.Semantic.DeepEqual(obj, oldObj) {
+					return nil
+				}
+			}
+			// call the type's validation function
+			errs = append(errs, v1.Validate_ConditionsAwareDecision(ctx, op, fldPath, obj, oldObj)...)
+			return
+		}
+		oldVal := safe.Field(oldObj,
+			func(oldObj *authorizationv1alpha1.AuthorizationConditionsRequest) *authorizationv1.ConditionsAwareDecision {
+				return &oldObj.Decision
+			})
+		errs = append(errs, fn(fldPath.Child("decision"), &obj.Decision, oldVal, oldObj != nil)...)
+	}
+
+	{ // field authorizationv1alpha1.AuthorizationConditionsRequest.AdmissionRequest
+		fn := func(
+			fldPath *field.Path,
+			obj, oldObj *admissionv1.AdmissionRequest,
+			oldValueCorrelated bool) (errs field.ErrorList) {
+			// don't revalidate unchanged data
+			if oldValueCorrelated && op.Type == operation.Update {
+				if equality.Semantic.DeepEqual(obj, oldObj) {
+					return nil
+				}
+			}
+			// call field-attached validations
+			earlyReturn := false
+			if e := validate.OptionalPointer(ctx, op, fldPath, obj, oldObj).MarkShortCircuit(); len(e) != 0 {
+				earlyReturn = true
+			}
+			if earlyReturn {
+				return // do not proceed
+			}
+			return
+		}
+		oldVal := safe.Field(oldObj,
+			func(oldObj *authorizationv1alpha1.AuthorizationConditionsRequest) *admissionv1.AdmissionRequest {
+				return oldObj.AdmissionRequest
+			})
+		errs = append(errs, fn(fldPath.Child("admissionRequest"), obj.AdmissionRequest, oldVal, oldObj != nil)...)
+	}
+
+	return errs
+}
+
+// Validate_AuthorizationConditionsResponse validates an instance of AuthorizationConditionsResponse according
+// to declarative validation rules in the API schema.
+func Validate_AuthorizationConditionsResponse(
+	ctx context.Context, op operation.Operation, fldPath *field.Path,
+	obj, oldObj *authorizationv1alpha1.AuthorizationConditionsResponse) (errs field.ErrorList) {
+
+	{ // field authorizationv1alpha1.AuthorizationConditionsResponse.UID
+		fn := func(
+			fldPath *field.Path,
+			obj, oldObj *types.UID,
+			oldValueCorrelated bool) (errs field.ErrorList) {
+			// don't revalidate unchanged data
+			if oldValueCorrelated && op.Type == operation.Update {
+				if obj == oldObj || (obj != nil && oldObj != nil && *obj == *oldObj) {
+					return nil
+				}
+			}
+			// call field-attached validations
+			earlyReturn := false
+			if e := validate.RequiredValue(ctx, op, fldPath, obj, oldObj).MarkShortCircuit(); len(e) != 0 {
+				errs = append(errs, e...)
+				earlyReturn = true
+			}
+			if earlyReturn {
+				return // do not proceed
+			}
+			return
+		}
+		oldVal := safe.Field(oldObj,
+			func(oldObj *authorizationv1alpha1.AuthorizationConditionsResponse) *types.UID {
+				return &oldObj.UID
+			})
+		errs = append(errs, fn(fldPath.Child("uid"), &obj.UID, oldVal, oldObj != nil)...)
+	}
+
+	{ // field authorizationv1alpha1.AuthorizationConditionsResponse.Decision
+		fn := func(
+			fldPath *field.Path,
+			obj, oldObj *authorizationv1.ConditionsAwareDecision,
+			oldValueCorrelated bool) (errs field.ErrorList) {
+			// don't revalidate unchanged data
+			if oldValueCorrelated && op.Type == operation.Update {
+				if equality.Semantic.DeepEqual(obj, oldObj) {
+					return nil
+				}
+			}
+			// call the type's validation function
+			errs = append(errs, v1.Validate_ConditionsAwareDecision(ctx, op, fldPath, obj, oldObj)...)
+			return
+		}
+		oldVal := safe.Field(oldObj,
+			func(oldObj *authorizationv1alpha1.AuthorizationConditionsResponse) *authorizationv1.ConditionsAwareDecision {
+				return &oldObj.Decision
+			})
+		errs = append(errs, fn(fldPath.Child("decision"), &obj.Decision, oldVal, oldObj != nil)...)
+	}
+
+	return errs
+}
+
+// Validate_AuthorizationConditionsReview validates an instance of AuthorizationConditionsReview according
+// to declarative validation rules in the API schema.
+func Validate_AuthorizationConditionsReview(
+	ctx context.Context, op operation.Operation, fldPath *field.Path,
+	obj, oldObj *authorizationv1alpha1.AuthorizationConditionsReview) (errs field.ErrorList) {
+
+	// field authorizationv1alpha1.AuthorizationConditionsReview.TypeMeta has no validation
+	// field authorizationv1alpha1.AuthorizationConditionsReview.ObjectMeta has no validation
+
+	{ // field authorizationv1alpha1.AuthorizationConditionsReview.Request
+		fn := func(
+			fldPath *field.Path,
+			obj, oldObj *authorizationv1alpha1.AuthorizationConditionsRequest,
+			oldValueCorrelated bool) (errs field.ErrorList) {
+			// don't revalidate unchanged data
+			if oldValueCorrelated && op.Type == operation.Update {
+				if equality.Semantic.DeepEqual(obj, oldObj) {
+					return nil
+				}
+			}
+			// call field-attached validations
+			earlyReturn := false
+			if e := validate.OptionalPointer(ctx, op, fldPath, obj, oldObj).MarkShortCircuit(); len(e) != 0 {
+				earlyReturn = true
+			}
+			if earlyReturn {
+				return // do not proceed
+			}
+			// call the type's validation function
+			errs = append(errs, Validate_AuthorizationConditionsRequest(ctx, op, fldPath, obj, oldObj)...)
+			return
+		}
+		oldVal := safe.Field(oldObj,
+			func(oldObj *authorizationv1alpha1.AuthorizationConditionsReview) *authorizationv1alpha1.AuthorizationConditionsRequest {
+				return oldObj.Request
+			})
+		errs = append(errs, fn(fldPath.Child("request"), obj.Request, oldVal, oldObj != nil)...)
+	}
+
+	{ // field authorizationv1alpha1.AuthorizationConditionsReview.Response
+		fn := func(
+			fldPath *field.Path,
+			obj, oldObj *authorizationv1alpha1.AuthorizationConditionsResponse,
+			oldValueCorrelated bool) (errs field.ErrorList) {
+			// don't revalidate unchanged data
+			if oldValueCorrelated && op.Type == operation.Update {
+				if equality.Semantic.DeepEqual(obj, oldObj) {
+					return nil
+				}
+			}
+			// call field-attached validations
+			earlyReturn := false
+			if e := validate.OptionalPointer(ctx, op, fldPath, obj, oldObj).MarkShortCircuit(); len(e) != 0 {
+				earlyReturn = true
+			}
+			if earlyReturn {
+				return // do not proceed
+			}
+			// call the type's validation function
+			errs = append(errs, Validate_AuthorizationConditionsResponse(ctx, op, fldPath, obj, oldObj)...)
+			return
+		}
+		oldVal := safe.Field(oldObj,
+			func(oldObj *authorizationv1alpha1.AuthorizationConditionsReview) *authorizationv1alpha1.AuthorizationConditionsResponse {
+				return oldObj.Response
+			})
+		errs = append(errs, fn(fldPath.Child("response"), obj.Response, oldVal, oldObj != nil)...)
+	}
+
+	return errs
+}
